Implementado segurança